fix excerpt / more posts per line in big views

--- a/_scss/engine/_settings.scss
+++ b/_scss/engine/_settings.scss
@@ -23,5 +23,7 @@ $lightGrey:   rgb(241,241,241);
 
 $tp-s-1: '(min-width: 360px)'; //post items
 $tp-s-2: '(min-width: 450px)';
+$tp-s-3: '(min-width: 600px)';
+$tp-s-4: '(min-width: 900px)';
 $bp-m: '(min-width: 840px)';
 $bp-l: '(min-width: 1000px)';
