add founders - new post list - first build with stylus

--- a/_stylus/partials/_top.styl
+++ b/_stylus/partials/_top.styl
@@ -1,52 +1,52 @@
 .social
-    background-color: #000;
-    overflow: hidden;
+    background-color: #000
+    overflow: hidden
 
-.social__list {
-    @extends $container;
-    text-align: right;
-}
+.social__list
+    @extends $container
+    text-align: right
 
-.social__item {
-    display: inline-block;
-    font-size: 1.2rem;
-    margin: .5em 1em;
-}
 
-.social__link {
-    color: #fff;
-}
+.social__item
+    display: inline-block
+    font-size: 1.2rem
+    margin: .5em 1em
+
+
+.social__link
+    color: #fff
+
 
 .social__link:hover path,
-.social__link:focus path {
-    fill: yellow;
-}
+.social__link:focus path
+    fill: yellow
 
-.lobby {
-    width: 100%;
-    background-color: #fff;
-    padding: 2em 0;
 
-    @media bp-l {
-        padding: 5em 0;
-    }
-}
+.lobby
+    width: 100%
+    background-color: #fff
+    padding: 2em 0
+
+    @media bp-l
+        padding: 5em 0
+
+
 .pageTitle
     font-size 0
     line-height 0
     font-family auto
 
-.logo {
-    width: 10em;
-    display: block;
-    margin: 0 auto;
+.logo
+    width: 10em
+    display: block
+    margin: 0 auto
     transition()
 
-    @media bp-m {
-        width: 15em;
-    }
+    @media bp-m
+        width: 15em
 
-    @media bp-l {
-        width: 20em;
-    }
-}
+
+    @media bp-l
+        width: 20em
+
+
