--- a/_stylus/engine/_overrides.styl
+++ b/_stylus/engine/_overrides.styl
@@ -10,3 +10,14 @@ body
     line-height lineHeight
     font-family txtFont
     overflow-x hidden
+
+a
+    text-decoration none
+    font-weight bold
+    color lighten(darkGrey, 25%)
+    transition()
+
+a:hover,
+a:focus
+	opacity .75
+
