--- a/_stylus/partials/_post.styl
+++ b/_stylus/partials/_post.styl
@@ -1,43 +1,42 @@
-.postContent__title {
-    @extends $container;
-}
+.postContent__title
+    @extends $container
 
-.postContent__title h2 {
-    font-size: 2.5rem;
-    color: green;
-    text-align: center;
-    margin: 2rem 0;
-}
 
-.postContent {
-    @extends $container;
-    margin: 0 auto;
-    width: 90%;
+.postContent__title h2
+    font-size: 2.5rem
+    color: green
+    text-align: center
+    margin: 2rem 0
 
-    @media bp-m {
-        width: 70%;
-    }
 
-    @media bp-l {
-        width: 40%;
-    }
-}
+.postContent
+    @extends $container
+    margin: 0 auto
+    width: 90%
 
-.postContent p {
-    margin-bottom: 1em;
-}
+    @media bp-m
+        width: 70%
 
-.postContent blockquote {
-    padding: 0 .5em;
+
+    @media bp-l
+        width: 40%
+
+
+
+.postContent p
+    margin-bottom: 1em
+
+
+.postContent blockquote
+    padding: 0 .5em
     border-left: solid 2px grey
-}
 
-.comments {
-    @extends $container;
-    padding: 2rem 0;
-}
 
-.comments #disqus_thread {
-    width: 60%;
-    margin: 0 auto;
-}
+.comments
+    @extends $container
+    padding: 2rem 0
+
+
+.comments #disqus_thread
+    width: 60%
+    margin: 0 auto
