--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,6 @@
+a {
+  color: #000;
+}
 .social__list,
 .postList,
 .organizers__list,
@@ -144,18 +147,6 @@ body {
   font-family: sans-serif;
   overflow-x: hidden;
 }
-a {
-  text-decoration: none;
-  font-weight: bold;
-  color: #4f4f4f;
-  -ms-transition: all 250ms linear 0;
-  -moz-transition: all 250ms linear 0;
-  transition: all 250ms linear 0;
-}
-a:hover,
-a:focus {
-  opacity: 0.75;
-}
 .social {
   background-color: #000;
   overflow: hidden;
@@ -244,7 +235,7 @@ a:focus {
   padding-top: 3em;
 }
 .posts {
-  background-color: #fff;
+  background-color: #f1f1f1;
 }
 .postList {
   width: 80%;
@@ -261,9 +252,8 @@ a:focus {
 }
 .post {
   overflow: hidden;
-  margin-bottom: 2.5rem;
+  padding: 1rem 0;
   background-color: #f1f1f1;
-  border-radius: 3px;
   -ms-transition: all 250ms linear 0;
   -moz-transition: all 250ms linear 0;
   transition: all 250ms linear 0;
@@ -273,6 +263,7 @@ a:focus {
     float: left;
     width: 45%;
     min-height: 12rem;
+    padding: 2em 15px;
     margin: 2.5%;
   }
 }
@@ -283,56 +274,46 @@ a:focus {
     margin: 2.5% 1.5%;
   }
 }
-.post__content {
-  width: 100%;
-}
 .post__date {
   display: block;
-  padding-top: 0.5em;
   font-family: monospace;
   font-weight: bold;
   text-align: center;
   clear: both;
 }
-.post__title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.post__authorPic {
+  display: block;
   clear: both;
+  width: 5em;
+}
+.post__title {
+  display: block;
+  clear: both;
+  max-width: 70%;
+  margin-left: 0.25rem;
   font-size: 1.2em;
-  width: 100%;
-  height: 3.6em;
-  margin: 0.5em 0;
-  padding: 0 0.5em;
+  font-variant: small-caps;
   color: #366;
   text-decoration: none;
-  text-align: center;
-  overflow: hidden;
 }
-.post__title:first-letter {
+.post__title::first-letter {
   font-weight: bold;
   font-size: 1.5em;
 }
 .post__author {
-  width: 100%;
   display: block;
   margin-top: 0.25em;
+  margin-left: 0.5em;
   font-size: 1em;
   text-decoration: none;
   clear: both;
-  background: #366;
-  overflow: hidden;
 }
 .post__excerpt {
-  height: 5rem;
-  overflow: hidden;
-  margin-left: 0.25em;
-  margin-bottom: 1em;
+  margin-left: 0.5em;
   font-size: 0.8rem;
 }
 .post__excerpt p {
   display: none;
-  padding: 1em 2em;
 }
 .post__excerpt p:first-child {
   display: block;
@@ -341,51 +322,21 @@ a:focus {
   float: left;
   max-width: 30%;
 }
-.author {
-  float: left;
-  max-width: 25%;
-  margin: 1rem 5%;
-}
-.author__photo {
-  width: 100%;
-  border-radius: 5px;
-}
-.post__authorPic {
-  display: block;
-  clear: both;
-  width: 5em;
-}
-.author__link {
-  display: block;
-  text-align: center;
-  color: #a7a9ab;
-  font-size: 0.8em;
-}
-.author__description {
-  float: left;
-  max-width: 55%;
-  margin-top: 1rem;
-  font-size: 0.8em;
-  color: #f1f1f1;
+.post__content {
+  float: right;
+  max-width: 67.2%;
+  min-width: 10em;
 }
 .organizers {
+  background-color: #fff;
   padding-bottom: 4rem;
 }
 .organizers__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   padding-top: 3rem;
   overflow: hidden;
   -ms-transition: all 250ms linear 0;
   -moz-transition: all 250ms linear 0;
   transition: all 250ms linear 0;
-}
-@media (min-width: 600px) {
-  .organizers__list {
-    flex-direction: row;
-  }
 }
 @media (min-width: 840px) {
   .organizers__list {
@@ -398,25 +349,9 @@ a:focus {
     width: 60%;
   }
 }
-.organizers__title {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #a7a9ab;
-  text-align: center;
-  font-style: italic;
-  line-height: 1;
-}
-@media (min-width: 600px) {
-  .organizers__title {
-    max-width: 40%;
-    position: relative;
-    top: -0.2em;
-    text-align: right;
-    font-size: 4rem;
-  }
-}
 .organizers__item {
   float: left;
+  width: 50%;
   padding: 0.2rem;
   -ms-transition: all 250ms linear 0;
   -moz-transition: all 250ms linear 0;
@@ -424,6 +359,7 @@ a:focus {
 }
 @media (min-width: 840px) {
   .organizers__item {
+    width: 25%;
     padding: 0;
   }
 }
@@ -431,7 +367,6 @@ a:focus {
   display: block;
   width: 50%;
   margin: 0 auto;
-  border-radius: 5px 5px 0 0;
   -ms-transition: all 250ms linear 0;
   -moz-transition: all 250ms linear 0;
   transition: all 250ms linear 0;
@@ -441,7 +376,7 @@ a:focus {
     width: 30%;
   }
 }
-@media (min-width: 450px) {
+@media (min-width: 840px) {
   .organizers__pic img {
     width: 90%;
     max-width: 5rem;
