add tags / adjust title-post / add avatar to small-size social bar

--- a/_stylus/engine/_resets.styl
+++ b/_stylus/engine/_resets.styl
@@ -18,9 +18,9 @@ time, mark, audio, video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
+    font-family: inherit;
     vertical-align: baseline;
-    color: $txtColor;
+    color: txtColor;
 }
 // HTML5 display-role reset for older browsers
 
