--- a/_stylus/engine/_settings.styl
+++ b/_stylus/engine/_settings.styl
@@ -9,6 +9,14 @@ lightGrey =   rgb(241,241,241)
     black =   rgb(0,0,0)
     white =   rgb(255,255,255)
 
+// other colors
+// - - - - - - -
+
+// categories tags
+
+purple = #532794
+orange = rgb(210, 130, 11)
+
 // basic definitions
 // - - - - - - - - -
 
