--- a/_stylus/index.styl
+++ b/_stylus/index.styl
@@ -2,8 +2,10 @@
 @import 'engine/_helpers'
 @import 'engine/_resets'
 @import 'engine/_overrides'
+@import 'partials/_social'
 @import 'partials/_top'
 @import 'partials/_highlight'
+@import 'partials/_tags'
 @import 'partials/_postList'
 @import 'partials/_organizers'
 @import 'partials/_post'
