--- a/_stylus/partials/_post.styl
+++ b/_stylus/partials/_post.styl
@@ -42,12 +42,19 @@
 
 
 .postContent p
-    margin-bottom: 1em
-
+    margin-bottom 1.5em
 
 .postContent blockquote
     padding: 0 .5em
     border-left: solid 2px grey
+
+.postContent h2
+    font-size 1.2em
+    border-bottom-width 10px
+    border-bottom 8px solid #ccc
+    padding-top 30px
+    margin-bottom 21px
+    padding-bottom 10px
 
 
 .comments
