--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ body {
 a {
   text-decoration: none;
   font-weight: bold;
-  color: #05454a;
+  color: #4f4f4f;
   -ms-transition: all 250ms linear 0;
   -moz-transition: all 250ms linear 0;
   transition: all 250ms linear 0;
@@ -295,8 +295,6 @@ a:focus {
   margin-bottom: 2.5rem;
   background-color: #f1f1f1;
   border-radius: 3px;
-  border: 1px solid #141414;
-  box-shadow: 6px 7px 5px 0px #747171;
   -ms-transition: all 250ms linear 0;
   -moz-transition: all 250ms linear 0;
   transition: all 250ms linear 0;
@@ -432,7 +430,7 @@ a:focus {
   }
 }
 .organizers__title {
-  font-size: 1rem;
+  font-size: 3rem;
   font-weight: bold;
   color: #a7a9ab;
   text-align: center;
@@ -445,7 +443,7 @@ a:focus {
     position: relative;
     top: -0.2em;
     text-align: right;
-    font-size: 1.4rem;
+    font-size: 4rem;
   }
 }
 .organizers__item {
@@ -547,19 +545,11 @@ a:focus {
   }
 }
 .postContent p {
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 .postContent blockquote {
   padding: 0 0.5em;
   border-left: solid 2px #a7a9ab;
-}
-.postContent h2 {
-  font-size: 1.2em;
-  border-bottom-width: 10px;
-  border-bottom: 8px solid #ccc;
-  padding-top: 30px;
-  margin-bottom: 21px;
-  padding-bottom: 10px;
 }
 .comments {
   padding: 2rem 0;
