fix Átila's picture / adjust template

--- a/_stylus/engine/_settings.styl
+++ b/_stylus/engine/_settings.styl
@@ -14,8 +14,9 @@ lightGrey =   rgb(241,241,241)
 
 // categories tags
 
-purple = #532794
-orange = rgb(210, 130, 11)
+purple   = #532794
+orange   = rgb(210, 130, 11)
+yellowJS = #d8b505
 
 // basic definitions
 // - - - - - - - - -
