--- a/_stylus/partials/_post.styl
+++ b/_stylus/partials/_post.styl
@@ -37,24 +37,18 @@
 
 
     @media bp-l
-        width: 40%
+        width: 55%
 
-
+.postContent h2
+    margin: 2em 0 1em
 
 .postContent p
-    margin-bottom 1.5em
+    margin: 1em 0
+
 
 .postContent blockquote
     padding: 0 .5em
     border-left: solid 2px grey
-
-.postContent h2
-    font-size 1.2em
-    border-bottom-width 10px
-    border-bottom 8px solid #ccc
-    padding-top 30px
-    margin-bottom 21px
-    padding-bottom 10px
 
 
 .comments
