--- a/_stylus/partials/_tags.styl
+++ b/_stylus/partials/_tags.styl
@@ -1,5 +1,5 @@
 .categories
-	margin 1em 0
+	margin 1em 0 2em
 	text-align: center
 	display: flex
 	justify-content: center
@@ -17,3 +17,9 @@
 
 .modules
 	background-color: purple
+
+.ES6
+	background-color: yellowJS
+
+.Interview
+	background-color: green
