--- a/_stylus/engine/_overrides.styl
+++ b/_stylus/engine/_overrides.styl
@@ -14,7 +14,7 @@ body
 a
     text-decoration none
     font-weight bold
-    color rgba(5, 69, 74, 1)
+    color lighten(darkGrey, 25%)
     transition()
 
 a:hover,
