--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ a:focus {
   padding-top: 3em;
 }
 .categories {
-  margin: 1em 0;
+  margin: 1em 0 2em;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -273,6 +273,12 @@ a:focus {
 }
 .modules {
   background-color: #532794;
+}
+.ES6 {
+  background-color: #d8b505;
+}
+.Interview {
+  background-color: #366;
 }
 .posts {
   background-color: #fff;
@@ -541,11 +547,14 @@ a:focus {
 }
 @media (min-width: 1000px) {
   .postContent {
-    width: 40%;
+    width: 55%;
   }
 }
+.postContent h2 {
+  margin: 2em 0 1em;
+}
 .postContent p {
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
 .postContent blockquote {
   padding: 0 0.5em;
