new post about modules, introducing portuguese version

--- a/_stylus/partials/_social.styl
+++ b/_stylus/partials/_social.styl
@@ -28,3 +28,14 @@
 .social__link:hover path,
 .social__link:focus path
     fill: yellow
+
+.flags
+    width 165px
+    float left
+    margin-top 10px
+    margin-left 10px
+
+.flags li
+    display: inline-block
+    font-size 1.2rem
+    margin 0.5em 0.1em
