--- a/src/templates/default/index.html
+++ b/src/templates/default/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="ES6Rocks" />
     <meta property="og:description" content="Articles and News about ECMA6: Harmony" />
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/flags/flag-icon.css">
 </head>
 <body>
 
