--- a/src/templates/default/page.html
+++ b/src/templates/default/page.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:image" content="http://es6rocks.com/images/es6rocks.png" />
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/flags/flag-icon.css">
 </head>
 <body>
 {% include "partials/navigation.html" %}
