--- a/src/templates/default/post.html
+++ b/src/templates/default/post.html
@@ -8,6 +8,7 @@
     <meta property="og:image" content="http://es6rocks.com/images/es6rocks.png" />
     <link href="/css/vendor/prism.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/flags/flag-icon.css">
 </head>
 <body>
 {% include "partials/navigation.html" %}
