--- a/src/templates/default/tag_archives.html
+++ b/src/templates/default/tag_archives.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/flags/flag-icon.css">
 </head>
 <body>
 	{% include "partials/navigation.html" %}
