change flags and fix top navigation bar at small screens

--- a/public/_stylus/partials/_social.styl
+++ b/public/_stylus/partials/_social.styl
@@ -1,10 +1,15 @@
 .social
+    width: 100%
+    padding: 0 5%
     background-color: #000
     overflow: hidden
+    display: flex
+    justify-content: space-between
+    align-items: center
 
 .social__list
-    @extends $container
-    text-align: right
+    //@extends $container
+    //text-align: right
 
 
 .social__item
@@ -12,30 +17,35 @@
     font-size: 1.2rem
     margin: .5em 1em
 
-    &.avatar
-        float: left
+.avatar
+    //float: left
+    display: none
 
-        svg > path
-            fill: white
-        @media bp-m
-            display: none
+    svg > path
+        fill: white
+
+    @media tp-s-2
+        display: inline-block
+
+    @media bp-m
+        display: none
+
 
 
 .social__link
     color: #fff
-
 
 .social__link:hover path,
 .social__link:focus path
     fill: yellow
 
 .flags
-    width 165px
-    float left
-    margin-top 10px
-    margin-left 10px
+    //width 165px
+    //float left
+    //margin-top 10px
+    //margin-left 10px
 
 .flags li
     display: inline-block
-    font-size 1.2rem
-    margin 0.5em 0.1em
+    font-size: 1.2rem
+    margin: .5em .25em
