--- a/src/templates/default/index.html
+++ b/src/templates/default/index.html
@@ -5,7 +5,7 @@
     <title>{{ config.title }}</title>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta property="og:image" content="http://es6rocks.com/images/es6rocks.png" />
+    <meta property="og:image" content="http://es6rocks.com/images/es6rocks.jpg" />
     <meta property="og:title" content="ES6Rocks" />
     <meta property="og:description" content="Articles and News about ECMA6: Harmony" />
     <link rel="stylesheet" href="/css/main.css">
