removing public folder. Fixing RSS. Adding post author

--- a/public/_stylus/partials/_post.styl
+++ b/public/_stylus/partials/_post.styl
@@ -62,3 +62,8 @@
 
     @media bp-l
         width: 60%
+.postContent__author, .postContent__author time
+    text-align: center;
+    font-style: italic;
+    color: gray;
+    font-size: 0.9em;
