--- a/src/templates/default/resources/_stylus/partials/_post.styl
+++ b/src/templates/default/resources/_stylus/partials/_post.styl
@@ -62,3 +62,8 @@
 
     @media bp-l
         width: 60%
+.postContent__author, .postContent__author time
+    text-align: center;
+    font-style: italic;
+    color: gray;
+    font-size: 0.9em;
