--- a/src/templates/default/resources/css/main.css
+++ b/src/templates/default/resources/css/main.css
@@ -572,6 +572,10 @@ code {
 .postContent p {
   margin: 1em 0;
 }
+.postContent h1 {
+  margin-top: 1.2em;
+  font-size: 2em;
+}
 .postContent blockquote {
   padding: 0 0.5em;
   border-left: solid 2px #a7a9ab;
