--- a/_stylus/partials/_post.styl
+++ b/_stylus/partials/_post.styl
@@ -50,6 +50,9 @@ code
 .postContent p
     margin: 1em 0
 
+.postContent h1
+    margin-top 1.2em
+    font-size 2em
 
 .postContent blockquote
     padding: 0 .5em
