Do not apply padding to code blocks
Fixes http://i.imgur.com/xkDBgpJ.png

--- a/src/templates/default/resources/_stylus/partials/_post.styl
+++ b/src/templates/default/resources/_stylus/partials/_post.styl
@@ -3,6 +3,9 @@ code
     font-family: Consolas, Monaco, 'Andale Mono', monospace
     padding: 0 5px
 
+pre > code
+    padding: 0
+
 .postContent__title
     @extends $container
     margin: 1em 0 2em
