--- a/css/main.css
+++ b/css/main.css
@@ -519,6 +519,9 @@ code {
   font-family: Consolas, Monaco, 'Andale Mono', monospace;
   padding: 0 5px;
 }
+pre > code {
+  padding: 0;
+}
 .postContent__title {
   margin: 1em 0 2em;
   display: flex;
