Fix broken favicon in posts, add favicon to pages

--- a/src/templates/2.0/index.html
+++ b/src/templates/2.0/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="News, tools, updates, tutorials, articles, ES6, JavaScript, harmony, ecma6, ecma">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ config.title }}</title>
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+        <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
         <!-- /meta -->
 
         <!-- normalize/modernize -->
