--- a/src/templates/2.0/page.html
+++ b/src/templates/2.0/page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ page.metadata.title }} - {{ config.title }}</title>
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:image" content="http://es6rocks.com/images/es6rocks.png" />
@@ -21,7 +22,7 @@
 		{{ page.content }}
 
 		{% include "partials/disqus.html" %}
-	</article>	
+	</article>
 
 	{% include "partials/footer.html" %}
 </body>
