--- a/src/templates/2.0/index.html
+++ b/src/templates/2.0/index.html
@@ -23,7 +23,7 @@
         <!-- /social -->
 
         <!-- style -->
-        <link rel="stylesheet" href="/css/normalize.min.css" />
+        <link rel="stylesheet" href="/css/vendor/normalize.min.css" />
         <link rel="stylesheet" href="/css/main.css" />
         <!-- /style -->
 
