--- a/src/templates/2.0/page.html
+++ b/src/templates/2.0/page.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:image" content="http://es6rocks.com/images/es6rocks.png" />
+    <link rel="stylesheet" href="/css/vendor/normalize.min.css" />
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
