Template 2.0: fix post author's link and picture

--- a/src/templates/2.0/post.html
+++ b/src/templates/2.0/post.html
@@ -40,9 +40,9 @@
                 <div>
                     <div class="article-meta">
                         <address>
-                            <img src="{{post.metadata.image}}" class="author-avatar" alt="{{post.metadata.authorName}}"/>
+                            <img src="{{post.metadata.authorPicture}}" class="author-avatar" alt="{{post.metadata.authorName}}"/>
                             <span class="alternative-text author-label">Posted by</span>
-                            <a href="{{post.metadata.authorURL}}" rel="author" class="author-link">
+                            <a href="{{post.metadata.authorLink}}" rel="author" class="author-link">
                                 {{post.metadata.authorName}}
                             </a>
                         </address>
