TESTIMONIALS | logic position status: updated

--- a/src/templates/2.0/resources/_stylus/partials/_testmonials.styl
+++ b/src/templates/2.0/resources/_stylus/partials/_testmonials.styl
@@ -16,12 +16,14 @@
     
     ul{
         padding: 0px;
+        text-align: center;
     }
 }
 
 .testimonial {
     list-style: none;
-    float: left;
+    text-align: left;
+    display: inline-block;
 
     blockquote {
         margin: 0;
@@ -63,7 +65,7 @@
     }
     
     .testimonial:nth-child(1n+1){
-        margin-left: 26px;
-        margin-right: 26px;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
