--- a/src/templates/2.0/resources/_stylus/partials/_articles.styl
+++ b/src/templates/2.0/resources/_stylus/partials/_articles.styl
@@ -44,6 +44,12 @@
         padding: 2rem;
         position: relative;
         overflow: hidden;
+       
+       a{
+         color: #000;
+         font-weight: bold;
+         transition: color linear transitionTime;
+       }
 
         &.recent {
             h2 {
@@ -72,6 +78,10 @@
 
             .article-share {
                 opacity: 1;
+            }
+
+            a{
+                color: fullColor;
             }
         }
 
