--- a/src/templates/2.0/resources/css/main.css
+++ b/src/templates/2.0/resources/css/main.css
@@ -636,6 +636,11 @@ article {
   position: relative;
   overflow: hidden;
 }
+article a {
+  color: #000;
+  font-weight: bold;
+  transition: color linear 0.2s;
+}
 article.recent h2 {
   font-size: 3.2rem;
   line-height: 3.2rem;
@@ -657,6 +662,9 @@ article:hover {
 }
 article:hover .article-share {
   opacity: 1;
+}
+article:hover a {
+  color: #e8ac0a;
 }
 article .article-share {
   position: absolute;
