[*] Bugfix | update stylesheet - categories hover at home page

--- a/src/templates/2.0/resources/_stylus/partials/_articles.styl
+++ b/src/templates/2.0/resources/_stylus/partials/_articles.styl
@@ -47,8 +47,14 @@ body[data-page-type="home"]{
             a{
                 color: fullColor;
             }
+            
+            .article-tags a {
+                color: #000;
+            }
         }
-    }
+        
+        
+    }    
 }
 
 
@@ -176,6 +182,7 @@ address {
         margin: 2px;
         height: 24px;
         line-height: 20px;
+        transition: background-color linear transitionTime;
 
         &:hover {
             background-color: fullColor;
