--- a/src/templates/2.0/page.html
+++ b/src/templates/2.0/page.html
@@ -1,30 +1,72 @@
-<!doctype html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ page.metadata.title }} - {{ config.title }}</title>
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
-    <meta name="viewport" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta property="og:image" content="http://es6rocks.com/images/es6rocks.png" />
-    <link rel="stylesheet" href="/css/vendor/normalize.min.css" />
-    <link rel="stylesheet" href="/css/main.css">
-</head>
-<body>
-{% include "partials/navigation.html" %}
-<body>
-	<header class="postContent__title">
-	    <h2>
-	      {{ page.metadata.title }}
-	    </h2>
-	</header>
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- meta -->
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="Articles, updates, tools, News and tutorials about ECMA6: Harmony">
+        <meta name="keywords" content="News, tools, updates, tutorials, articles, ES6, JavaScript, harmony, ecma6, ecma">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{{ config.title }}</title>
+        <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+        <!-- /meta -->
 
-	<article class="postContent">
-		{{ page.content }}
+        <!-- normalize/modernize -->
+        <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <!-- /normalize/modernize -->
 
-		{% include "partials/disqus.html" %}
-	</article>
+        <!-- social -->
+        <meta property="og:image" content="http://es6rocks.com/images/es6rocks.jpg" />
+        <meta property="og:title" content="ES6Rocks" />
+        <meta property="og:description" content="Articles and News about ECMA6: Harmony" />
+        <!-- TODO: add twitter card and Google+ meta tags -->
+        <!-- /social -->
 
-	{% include "partials/footer.html" %}
-</body>
+        <!-- style -->
+        <link rel="stylesheet" href="/css/vendor/normalize.min.css" />
+        <link rel="stylesheet" href="/css/main.css" />
+        <!-- /style -->
+
+    </head>
+    <body data-page-type="home">
+
+        {% include "partials/header.html" %}
+
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+                <div class="decorator-line dl-3"></div>
+                <div class="decorator-line dl-4"></div>
+
+                {% for video in config.videos %}
+
+                    <article>
+                        <asside class="article-share" data-post-url="/{{post.link}}">
+                            <a class="icon fb-share btn-share" target="_blank">Share on Facebook</a>
+                            <a class="icon tt-share btn-share">Share on Twitter</a>
+                            <a class="icon gp-share btn-share" target="_blank">Share on Google Plus</a>
+                        </asside>
+
+                        <iframe width="280" height="250" style="margin-left:-10px;margin-top:-16px;" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
+
+                        <ul class="article-tags" style="margin:-4.7rem 0px">
+                        {% for category in video.categories %}
+                            <li>
+								{{ category }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    </article>
+                {% endfor %}
+            </div>
+
+            <div class="more-posts-wrapper wrapper clearfix">
+                <div class="decorator-line dl-5"></div>
+                <input type="button" value="More Posts" class="button btn"/><!-- ⟳ -->
+                <div class="decorator-line dl-6"></div>
+            </div>
+        </div>
+
+        {% include "partials/testimonials.html" %}
+        {% include "partials/footer.html" %}
+    </body>
 </html>
