--- a/css/style.css
+++ b/css/style.css
@@ -135,11 +135,6 @@ header{
     width: 100%;
     height: 530px;
     padding-top: 20px;
-
-    -webkit-background-size: 100% auto;
-    -moz-background-size: 100% auto;
-    -o-background-size: 100% auto;
-    background-size: 100% auto;
 }
 code[class*="language-"], pre[class*="language-"] {
     font-size: 14px;
@@ -419,6 +414,13 @@ code[class*="language-"], pre[class*="language-"] {
 }
 .intro-post{
     line-height: 16px;
+}
+.intro-post a {
+    color: #000;
+    text-decoration: underline;
+}
+.intro-post a:hover {
+    text-decoration: none;
 }
 .post-big .title-post {
     font-size: 4.8em;
